Write Three Templates (something wrong with OR)

--- a/pdollar.html
+++ b/pdollar.html
@@ -3,10 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>$P Recognizer</title>
-	<link href="styles.css" rel="stylesheet" type="text/css" />
+	<!-- <link href="styles.css" rel="stylesheet" type="text/css" /> -->
 	<!--[if IE]><script src="excanvas.js"></script><![endif]-->
 	<script type="text/javascript" src="canvas.text.js"></script>
-	<script type="text/javascript" src="./faces/gentilis-normal-normal.js"></script>
+	<script type="text/javascript" src="gentilis-normal-normal.js"></script>
 	<script type="text/javascript" src="pdollar.js"></script>
 	<script type="text/javascript"><!--
 		//
