--- a/pdollar.html
+++ b/pdollar.html
@@ -102,10 +102,11 @@
 			document.onmousedown = function() { return true; } // enable drag-select
 			if (button <= 1)
 			{
+				isline(_points);
 				if (_isDown)
 				{
 					_isDown = false;
-					drawText("Stroke #" + _strokeID + " recorded.");
+					// drawText("Stroke #" + _strokeID + " recorded.");
 				}
 			}
 			else if (button == 2) // segmentation with right-click
@@ -186,6 +187,23 @@
 			_strokeID = 0;
 			_g.clearRect(0, 0, _rc.width, _rc.height);
 			drawText("Canvas cleared.");
+		}
+
+		function isline(points)
+		{
+			var minX = + Infinity, maxX = - Infinity, minY = + Infinity, maxY = - Infinity;
+    		for (var i = 0; i < points.length; i++) {
+        		minX = Math.min(minX, points[i].X);
+        		minY = Math.min(minY, points[i].Y);
+        		maxX = Math.max(maxX, points[i].X);
+        		maxY = Math.max(maxY, points[i].Y);
+    		}
+    		if ((maxX - minX) < 0.1 * (maxY - minY)){
+    			drawText("Is line");
+    		}
+    		else{
+    			drawText("Not line");
+    		}
 		}
 	// -->
 	</script>
