--- a/pdollar.html
+++ b/pdollar.html
@@ -18,6 +18,50 @@
 			_points = new Array(); // point array for current stroke
 			_strokeID = 0;
 			_r = new PDollarRecognizer();
+			_r1 = new PDollarRecognizer();
+			_r1.addGates(
+				new Array(
+					new PointCloud("AND", new Array(
+							new Point(499,291,1),new Point(499,237,1),new Point(499,366,1),new Point(499,400,1),
+							new Point(499,290,2),new Point(531,290,2),new Point(561,290,2),new Point(589,302,2),new Point(607,327,2),new Point(611,347,2),new Point(603,372,2),new Point(587,391,2),new Point(563,401,2),new Point(536,402,2),new Point(500,401,2)
+					)),
+					new PointCloud("NAND", new Array(
+							new Point(499,291,1),new Point(499,237,1),new Point(499,366,1),new Point(499,400,1),
+							new Point(499,290,2),new Point(531,290,2),new Point(561,290,2),new Point(589,302,2),new Point(607,327,2),new Point(611,347,2),new Point(603,372,2),new Point(587,391,2),new Point(563,401,2),new Point(536,402,2),new Point(500,401,2),
+							new Point(628,334,3),new Point(617,340,3),new Point(616,348,3),new Point(623,357,3),new Point(636,356,3),new Point(642,346,3),new Point(635,336,3),new Point(629,334,3)
+					)),
+					new PointCloud("NOT", new Array(
+							new Point(323,600,1),new Point(323,619,1),new Point(323,639,1),
+							new Point(323,600,2),new Point(362,619,2),new Point(323,638,2),
+							new Point(363,619,3),new Point(365,622,3),new Point(367,623,3),new Point(370,622,3),new Point(371,620,3),new Point(370,617,3),new Point(367,616,3),new Point(364,617,3),new Point(363,619,3)
+					))
+				)
+			);
+			_r2 = new PDollarRecognizer();
+			_r2.addGates(
+				new Array(
+		        new PointCloud("OR", new Array(
+		            new Point(493,320,1),new Point(500,334,1),new Point(506,349,1),new Point(510,373,1),new Point(509,390,1),new Point(504,407,1),new Point(498,422,1),new Point(491,432,1),
+		            new Point(492,319,2),new Point(518,319,2),new Point(541,319,2),new Point(553,321,2),new Point(571,326,2),new Point(586,334,2),new Point(601,346,2),new Point(614,361,2),new Point(622,376,2),new Point(610,395,2),new Point(596,410,2),new Point(579,421,2),new Point(557,428,2),new Point(542,431,2),new Point(521,430,2),new Point(493,430,2)
+		        )),
+		        new PointCloud("XOR", new Array(
+		            new Point(472,318,1),new Point(482,332,1),new Point(486,346,1),new Point(492,362,1),new Point(493,374,1),new Point(490,393,1),new Point(485,411,1),new Point(473,431,1),
+		            new Point(493,320,2),new Point(500,334,2),new Point(506,349,2),new Point(510,373,2),new Point(509,390,2),new Point(504,407,2),new Point(498,422,2),new Point(491,432,2),
+		            new Point(492,319,3),new Point(518,319,3),new Point(541,319,3),new Point(553,321,3),new Point(571,326,3),new Point(586,334,3),new Point(601,346,3),new Point(614,361,3),new Point(622,376,3),new Point(610,395,3),new Point(596,410,3),new Point(579,421,3),new Point(557,428,3),new Point(542,431,3),new Point(521,430,3),new Point(493,430,3)
+		        )),
+		        new PointCloud("NOR", new Array(
+		            new Point(493,320,1),new Point(500,334,1),new Point(506,349,1),new Point(510,373,1),new Point(509,390,1),new Point(504,407,1),new Point(498,422,1),new Point(491,432,1),
+		            new Point(492,319,2),new Point(518,319,2),new Point(541,319,2),new Point(553,321,2),new Point(571,326,2),new Point(586,334,2),new Point(601,346,2),new Point(614,361,2),new Point(622,376,2),new Point(610,395,2),new Point(596,410,2),new Point(579,421,2),new Point(557,428,2),new Point(542,431,2),new Point(521,430,2),new Point(493,430,2),
+		            new Point(635,363,3),new Point(625,368,3),new Point(622,379,3),new Point(631,385,3),new Point(635,387,3),new Point(645,382,3),new Point(648,375,3),new Point(641,365,3),new Point(635,363,3)
+		        )),
+		        new PointCloud("XNOR", new Array(
+		            new Point(472,318,1),new Point(482,332,1),new Point(486,346,1),new Point(492,362,1),new Point(493,374,1),new Point(490,393,1),new Point(485,411,1),new Point(473,431,1),
+		            new Point(493,320,2),new Point(500,334,2),new Point(506,349,2),new Point(510,373,2),new Point(509,390,2),new Point(504,407,2),new Point(498,422,2),new Point(491,432,2),
+		            new Point(492,319,3),new Point(518,319,3),new Point(541,319,3),new Point(553,321,3),new Point(571,326,3),new Point(586,334,3),new Point(601,346,3),new Point(614,361,3),new Point(622,376,3),new Point(610,395,3),new Point(596,410,3),new Point(579,421,3),new Point(557,428,3),new Point(542,431,3),new Point(521,430,3),new Point(493,430,3),
+		            new Point(635,363,4),new Point(625,368,4),new Point(622,379,4),new Point(631,385,4),new Point(635,387,4),new Point(645,382,4),new Point(648,375,4),new Point(641,365,4),new Point(635,363,4)
+		        ))
+		    )
+			);
 
 			var canvas = document.getElementById('myCanvas');
 			_g = canvas.getContext('2d');
@@ -100,13 +144,18 @@
 		{
 			document.onselectstart = function() { return true; } // enable drag-select
 			document.onmousedown = function() { return true; } // enable drag-select
+
+			if(_strokeID == 1)
+			{
+				(isline(_points))?(_r=_r1):(_r=_r2);//check if the first stroke is line or not.
+			}
+
 			if (button <= 1)
 			{
-				isline(_points);
 				if (_isDown)
 				{
 					_isDown = false;
-					// drawText("Stroke #" + _strokeID + " recorded.");
+					drawText("Stroke #" + _strokeID + " recorded.");
 				}
 			}
 			else if (button == 2) // segmentation with right-click
@@ -150,37 +199,7 @@
 		//
 		// Multistroke Adding and Clearing
 		//
-		function onClickAddExisting()
-		{
-			if (_points.length >= 10)
-			{
-				var pointclouds = document.getElementById('pointclouds');
-				var name = pointclouds[pointclouds.selectedIndex].value;
-				var num = _r.AddGesture(name, _points);
-				drawText("\"" + name + "\" added. Number of \"" + name + "\"s defined: " + num + ".");
-				_strokeID = 0; // signal to begin new gesture on next mouse-down
-			}
-		}
-		function onClickAddCustom()
-		{
-			var name = document.getElementById('custom').value;
-			if (_points.length >= 10 && name.length > 0)
-			{
-				var num = _r.AddGesture(name, _points);
-				drawText("\"" + name + "\" added. Number of \"" + name + "\"s defined: " + num + ".");
-				_strokeID = 0; // signal to begin new gesture on next mouse-down
-			}
-		}
-		function onClickCustom()
-		{
-			document.getElementById('custom').select();
-		}
-		function onClickDelete()
-		{
-			var num = _r.DeleteUserGestures(); // deletes any user-defined templates
-			alert("All user-defined gestures have been deleted. Only the 1 predefined gesture remains for each of the " + num + " types.");
-			_strokeID = 0; // signal to begin new gesture on next mouse-down
-		}
+
 		function onClickClearStrokes()
 		{
 			_points.length = 0;
@@ -199,10 +218,10 @@
         		maxY = Math.max(maxY, points[i].Y);
     		}
     		if ((maxX - minX) < 0.1 * (maxY - minY)){
-    			drawText("Is line");
+	    			return true;
     		}
     		else{
-    			drawText("Not line");
+    				return false;
     		}
 		}
 	// -->
@@ -211,7 +230,7 @@
 <body onload="onLoadEvent()">
 
 	<div id="Content">
-		
+
 
 		<p class="subhead">Demo</p>
 		<p>
@@ -235,23 +254,6 @@
 			</canvas>
 
 			<!--<p align="center" style="margin-top:10em;margin-bottom:10em"><i>Canvas coming soon...</i></p>-->
-
-			<!-- Editing area below stroking canvas area -->
-			<table border="0" width="420" style="font-size:10pt">
-				<tr>
-				</tr>
-				<tr>
-					<td valign="top" align="left">Add as example of custom type:</td>
-					<td valign="top" align="right"><input type="text" id="custom" style="width:130px" value="Type name here..." onclick="onClickCustom()" onkeypress="if (event.keyCode == 13) onClickAddCustom()" /></td>
-					<td valign="top" align="right"><input type="button" style="width:64px" value="  Add   " onclick="onClickAddCustom()" /></td>
-				</tr>
-				<tr>
-					<td valign="top" align="left">Delete all user-defined gestures:</td>
-					<td valign="top" align="right">&nbsp;</td>
-					<td valign="top" align="right"><input type="button" style="width:64px" value="Delete" onclick="onClickDelete()" /></td>
-				</tr>
-			</table>
-			<!-- End of editing area below stroking canvas area -->
 
 
 
