--- a/pdollar.html
+++ b/pdollar.html
@@ -155,7 +155,7 @@
 				if (_isDown)
 				{
 					_isDown = false;
-					drawText("Stroke #" + _strokeID + " recorded.");
+					// drawText("Stroke #" + _strokeID + " recorded.");
 				}
 			}
 			else if (button == 2) // segmentation with right-click
@@ -210,19 +210,19 @@
 
 		function isline(points)
 		{
-			var minX = + Infinity, maxX = - Infinity, minY = + Infinity, maxY = - Infinity;
-    		for (var i = 0; i < points.length; i++) {
-        		minX = Math.min(minX, points[i].X);
-        		minY = Math.min(minY, points[i].Y);
-        		maxX = Math.max(maxX, points[i].X);
-        		maxY = Math.max(maxY, points[i].Y);
-    		}
-    		if ((maxX - minX) < 0.1 * (maxY - minY)){
-	    			return true;
-    		}
-    		else{
-    				return false;
-    		}
+		var path = 0;
+		    for (var i = 0; i < points.length-1; i++) {
+		        path += Math.sqrt(Math.pow(points[i].X - points[i+1].X, 2) + Math.pow(points[i].Y - points[i+1].Y, 2));
+		    }
+		    var line = Math.sqrt(Math.pow(points[0].X - points[points.length-1].X, 2) + Math.pow(points[0].Y - points[points.length-1].Y, 2));
+		    if (line > 0.98 * path){
+					drawText("is line");
+		    	return true;
+		    }
+		    else{
+					drawText("is not line");
+		    	return false;
+		    }
 		}
 	// -->
 	</script>
