--- a/pdollar.html
+++ b/pdollar.html
@@ -5,6 +5,9 @@
 	<title>$P Recognizer</title>
 	<!-- <link href="styles.css" rel="stylesheet" type="text/css" /> -->
 	<!--[if IE]><script src="excanvas.js"></script><![endif]-->
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="canvas.text.js"></script>
 	<script type="text/javascript" src="gentilis-normal-normal.js"></script>
 	<script type="text/javascript" src="pdollar.js"></script>
@@ -228,35 +231,63 @@
 	</script>
 </head>
 <body onload="onLoadEvent()">
-
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">Circuit Recognition</a>
+	    </div>
+	    <div>
+	      <ul class="nav navbar-nav navbar-right">
+	        <li> <a href="#">Demo</a></li>
+	        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Tool <span class="caret"	></span></a>
+	          <ul class="dropdown-menu">
+	            <li><a href="#">Tool 1</a></li>
+	            <li><a href="#">Tool 2</a></li>
+	            <li><a href="#">Tool 3</a></li>
+	          </ul>
+	        </li>
+	        <li><a href="#">Eraser</a></li>
+	        <li><a href="#">Color</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+  
 	<div id="Content">
+		
 
-
-		<p class="subhead">Demo</p>
-		<p>
-			<!-- Gesture image and canvas -->
-			<table border="0" cellpadding="0" cellspacing="0">
-				<tr>
-					<td valign="bottom">
-						<p style="font-size:10pt">
-						</p>
-					</td>
-					<td valign="middle"><input type="button" style="width:64px;float:right" value=" Clear  " onclick="onClickClearStrokes()"></td>
-				</tr>
-			</table>
-
-			<canvas id="myCanvas" width="600" height="400" style="background-color:#000000"
-					onmousedown="mouseDownEvent(event.clientX, event.clientY, event.button)"
-					onmousemove="mouseMoveEvent(event.clientX, event.clientY, event.button)"
-					onmouseup="mouseUpEvent(event.clientX, event.clientY, event.button)"
-					oncontextmenu="return false;">
-				<span style="background-color:#ffff88;">The &lt;canvas&gt; element is not supported by this browser.</span>
+		<div class="row">
+			<div class="col-sm-3"></div>
+			<div class="col-sm-7">
+			<canvas id="myCanvas" width="600" height="400" margin="0 auto" style="background-color:#000000"
+				onmousedown="mouseDownEvent(event.clientX, event.clientY, event.button)"
+				onmousemove="mouseMoveEvent(event.clientX, event.clientY, event.button)"
+				onmouseup="mouseUpEvent(event.clientX, event.clientY, event.button)"
+				oncontextmenu="return false;">
+			<span style="background-color:#ffff88;">The &lt;canvas&gt; element is not supported by thisbrowser.</span>
 			</canvas>
-
-			<!--<p align="center" style="margin-top:10em;margin-bottom:10em"><i>Canvas coming soon...</i></p>-->
-
-
+			</div>
+			<div class="col-sm-1 btn-group-vertical">
+				<button type="button" class="btn btn-warning" value="Clear" onclick="onClickClearStrokes()">Clear</button>					
+				<button type="button" class="btn btn-primary">Tool</button>				
+				<button type="button" class="btn btn-danger">Eraser</button>	
+				<button type="button" class="btn btn-info">Color</button>				
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-2"></div>
+			<div class="col-sm-8">
+ 				<form role="form">
+ 				   <div class="form-group">
+ 				     <label for="comment">Feedback:</label>
+ 				     <textarea class="form-control" rows="2" id="feedback"></textarea>
+ 				 </br>
+ 				   </div>
+ 				   <input type="submit" class="btn btn-success" value="Submit">
+ 				</form>				
+			</div>
+			<div class="col-sm-2"></div>
 
 	</div>
-	</body>
+</body>
 </html>
