--- a/pdollar.html
+++ b/pdollar.html
@@ -36,9 +36,9 @@
 	    </div>
 	  </div>
 	</nav>
-  
+
 	<div id="Content">
-		
+
 
 		<div class="row">
 			<div class="col-sm-3"></div>
@@ -52,10 +52,10 @@
 			</canvas>
 			</div>
 			<div class="col-sm-1 btn-group-vertical">
-				<button type="button" class="btn btn-warning" value="Clear" onclick="onClickClearStrokes()">Clear</button>					
-				<button type="button" class="btn btn-primary">Tool</button>				
-				<button type="button" class="btn btn-danger">Eraser</button>	
-				<button type="button" class="btn btn-info">Color</button>				
+				<button type="button" class="btn btn-warning" value="Clear" onclick="onClickClearStrokes()">Clear</button>
+				<button type="button" class="btn btn-primary">Tool</button>
+				<button type="button" class="btn btn-danger">Eraser</button>
+				<button type="button" class="btn btn-info">Color</button>
 			</div>
 		</div>
 		<div class="row">
@@ -68,10 +68,15 @@
  				 </br>
  				   </div>
  				   <input type="submit" class="btn btn-success" value="Submit">
- 				</form>				
+ 				</form>
 			</div>
 			<div class="col-sm-2"></div>
 
+	</div>
+
+	<div style="display:none;">
+	  <img id="NANDSVG" src="img/NAND.svg"
+	       width="300" height="227">
 	</div>
 </body>
 </html>
