beatify nearly done, scaling not so beautiful now

--- a/pdollar.html
+++ b/pdollar.html
@@ -75,8 +75,13 @@
 	</div>
 
 	<div style="display:none;">
-	  <img id="NANDSVG" src="img/NAND.svg"
-	       width="300" height="227">
+	  <img id="ANDSVG" src="img/AND.svg">
+		<img id="NANDSVG" src="img/NAND.svg">
+		<img id="NOTSVG" src="img/NOT.svg">
+		<img id="XORSVG" src="img/XOR.svg">
+		<img id="XNORSVG" src="img/XNOR.svg">
+		<img id="ORSVG" src="img/OR.svg">
+		<img id="NORSVG" src="img/NOR.svg">
 	</div>
 </body>
 </html>
