--- a/pdollar.html
+++ b/pdollar.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="gentilis-normal-normal.js"></script>
 	<script type="text/javascript" src="pdollar.js"></script>
 	<script type="text/javascript" src="controller.js"></script>
+	<script type="text/javascript" src="gates.js"></script>
 
 </head>
 <body onload="onLoadEvent()">
