wait time adjusted, bug found! Stroke order issue

--- a/pdollar.html
+++ b/pdollar.html
@@ -84,6 +84,7 @@
 		<img id="XNORSVG" src="img/XNOR.svg">
 		<img id="ORSVG" src="img/OR.svg">
 		<img id="NORSVG" src="img/NOR.svg">
+		<img id="IOSVG" src="img/IO.svg">
 	</div>
 </body>
 </html>
