--- a/pdollar.html
+++ b/pdollar.html
@@ -54,9 +54,9 @@
 			</div>
 			<div class="col-sm-1 btn-group-vertical">
 				<button type="button" class="btn btn-warning" value="Clear" onclick="onClickClearStrokes()">Clear</button>
-				<button type="button" class="btn btn-primary" value="Submit" onclick="submit()">Submit</button>
+				<button type="button" class="btn btn-primary" value="Submit">Submit</button>
 				<!-- <button type="button" class="btn btn-primary">Tool</button> -->
-				<button type="button" class="btn btn-danger">Eraser</button>
+				<button type="button" class="btn btn-danger" value = "Erase" onclick="clearLastBeautifiedGate()">Erase Last</button>
 				<button type="button" class="btn btn-info">Color</button>
 			</div>
 		</div>
