bug -- conflicts of clear canvas and clear all

--- a/pdollar.html
+++ b/pdollar.html
@@ -53,7 +53,7 @@
 			</canvas>
 			</div>
 			<div class="col-sm-1 btn-group-vertical">
-				<button type="button" class="btn btn-warning" value="Clear" onclick="onClickClearStrokes()">Clear</button>
+				<button type="button" class="btn btn-warning" value="Clear" onclick="clearAll()">Clear</button>
 				<button type="button" class="btn btn-primary" value="Submit">Submit</button>
 				<!-- <button type="button" class="btn btn-primary">Tool</button> -->
 				<button type="button" class="btn btn-danger" value = "Erase" onclick="clearLastBeautifiedGate()">Erase Last</button>
