add circuit class, add input&output symbol, modify points bug

--- a/pdollar.html
+++ b/pdollar.html
@@ -42,7 +42,7 @@
 
 
 		<div class="row">
-			<div class="col-sm-3"></div>
+			<div class="col-sm-3" id="forinput"></div>
 			<div class="col-sm-7">
 			<canvas id="myCanvas" width="600" height="400" margin="0 auto" style="background-color:#000000"
 				onmousedown="mouseDownEvent(event.clientX, event.clientY, event.button)"
